added test code for project2b

--- a/proj1c/Proj1C/Makefile
+++ b/proj1c/Proj1C/Makefile
@@ -1,19 +1,16 @@
-.PHONY: setup
-
-setup:
-	mkdir -p lib; \
-	mkdir -p bin; \
-	mkdir -p include; \
-	cp math330.h include; \
 
 cli: cli/cli.c lib.a
-	cp libmath330.a lib; \
-	gcc -Wall -o bin/cli cli/cli.c -Iinclude -Llib -lmath330; \
+	mv libmath330.a lib; \
+	gcc -Wall -o bin/cli cli/cli.c -Iinclude -Llib -lmath330
 
 lib.a: exp330.o log330.o cos330.o sin330.o tan330.o
 	ar r libmath330.a exp330.o log330.o cos330.o sin330.o tan330.o
 
-exp330.o: exp/exp330.c
+exp330.o: exp/exp330.c	
+	mkdir -p lib; \
+	mkdir -p bin; \
+	mkdir -p include; \
+	cp math330.h include; \
 	gcc -c exp/exp330.c -Iinclude
 
 log330.o: exp/log330.c
@@ -28,9 +25,8 @@ sin330.o: trig/sin330.c
 tan330.o: trig/tan330.c
 	gcc -c trig/tan330.c -Iinclude
 
-
 clean:
 	rm -f *.o; \
 	rm -rf bin; \
 	rm -rf include; \
-	rm -rf lib; \
+	rm -rf lib
