added proj3c code

--- a/proj1c/Proj1C/Makefile
+++ b/proj1c/Proj1C/Makefile
@@ -3,8 +3,8 @@ cli: cli/cli.c lib.a
 	mv libmath330.a lib; \
 	gcc -Wall -o bin/cli cli/cli.c -Iinclude -Llib -lmath330
 
-lib.a: exp330.o log330.o cos330.o sin330.o tan330.o
-	ar r libmath330.a exp330.o log330.o cos330.o sin330.o tan330.o
+lib.a: exp330.o log330.o cos330.o sin330.o tan330.o arctan330.o arccos330.o arcsin330.o
+	ar r libmath330.a exp330.o log330.o cos330.o sin330.o tan330.o arctan330.o arccos330.o arcsin330.o
 
 exp330.o: exp/exp330.c	
 	mkdir -p lib; \
@@ -24,6 +24,15 @@ sin330.o: trig/sin330.c
 
 tan330.o: trig/tan330.c
 	gcc -c trig/tan330.c -Iinclude
+
+arctan330.o: trig/arctan330.c
+	gcc -c trig/arctan330.c -Iinclude
+
+arccos330.o: trig/arccos330.c
+	gcc -c trig/arccos330.c -Iinclude
+
+arcsin330.o: trig/arcsin330.c
+	gcc -c trig/arcsin330.c -Iinclude
 
 clean:
 	rm -f *.o; \
